added gitignore, updated html and css

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
 							/>
 						</div>
 					</div>
-
 					<div class="view-all-container">
 						<h3>Our Projects</h3>
 						<p>
@@ -455,29 +454,29 @@
 					><br />
 					<a href="tel:+919898765656">+91 98987 65656</a>
 				</div>
-				<div class="companies-icon-container hide">
+				<div class="logos-icon-container hide">
 					<img
-						class="companies-icon-item"
+						class="logos-icon-item"
 						src="pictures/facebook.png"
 						alt="Facebook icon"
 					/>
 					<img
-						class="companies-icon-item"
+						class="logos-icon-item"
 						src="pictures/linkedin.png"
 						alt="LinkedIn icon"
 					/>
 					<img
-						class="companies-icon-item"
+						class="logos-icon-item"
 						src="pictures/twitter.png"
 						alt="Twitter icon"
 					/>
 					<img
-						class="companies-icon-item"
+						class="logos-icon-item"
 						src="pictures/youtube.png"
 						alt="Youtube icon"
 					/>
 					<img
-						class="companies-icon-item"
+						class="logos-icon-item"
 						src="pictures/instagram.png"
 						alt="Instagram icon"
 					/>
