Fixed. Almost ready

--- a/index.html
+++ b/index.html
@@ -229,26 +229,13 @@
 							aliquam,
 						</p>
 					</div>
-					<div class="blogs-item">
+					<div class="blogs-item laptop">
 						<img
 							src="pictures/plantation-interior.png"
 							alt="Plantation interior"
 							class="blogs-img hidden"
 						/>
 						<p class="blogs-heading hidden">Plantation interior</p>
-						<p class="p-start hidden">
-							Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit ut
-							<br />
-							aliquam,
-						</p>
-					</div>
-					<div class="blogs-item">
-						<img
-							src="pictures/role-of-furnitures.png"
-							alt="Role of furnitures"
-							class="blogs-img hidden"
-						/>
-						<p class="blogs-heading hidden">Role of furnitures</p>
 						<p class="p-start hidden">
 							Lorem ipsum dolor sit amet, <br />consectetur adipiscing elit ut
 							<br />
@@ -263,7 +250,7 @@
 			<section class="products">
 				<h3>Our Interior Design Products</h3>
 				<div class="products-container">
-					<div class="products-item">
+					<div class="products-item laptop">
 						<img src="pictures/image_24.png" alt="shelf" />
 						<img src="pictures/image_25.png" alt="shelf" />
 					</div>
@@ -299,7 +286,7 @@
 				</p>
 				<div class="costumers-container hidden">
 					<img
-						class="img_opacity hidden"
+						class="img_opacity hidden laptop"
 						src="pictures/image_30.png"
 						alt="armchair"
 					/>
@@ -309,7 +296,7 @@
 						alt="spectacular view image"
 					/>
 					<img
-						class="img_opacity hidden"
+						class="img_opacity hidden laptop"
 						src="pictures/image_29.png"
 						alt="chairs"
 					/>
