Project is ready

--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
 					<div class="view-all-container">
 						<h3>Our Projects</h3>
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit ut
-							aliquam, purus sit amet luctus<br />
-							venenatis, lectus magna fringilla urna, porttitor rhoncus dolor
-							purus non enim praesent<br />
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit ut<br />
+							aliquam, purus sit amet luctus venenatis, lectus magna fringilla
+							urna,<br />
+							porttitor rhoncus dolor purus non enim praesent<br />
 							elementum facilisis leo, vel fringilla est ullamcorper eget nulla
 						</p>
 						<p class="view-p">
-							magna fringilla urna, porttitor rhoncus dolor purus non enim
-							praesent elementum facilisis leo,<br />
+							magna fringilla urna, porttitor rhoncus dolor purus non<br />
+							enim praesent elementum facilisis leo,<br />
 							vel fringilla est ullamcorper eget nulla
 						</p>
 						<a class="view-href" href="#" target="_blank">View all</a>
@@ -286,19 +286,9 @@
 				</p>
 				<div class="costumers-container hidden">
 					<img
-						class="img_opacity hidden laptop"
-						src="pictures/image_30.png"
-						alt="armchair"
-					/>
-					<img
 						class="hidden"
 						src="pictures/image_22.png"
 						alt="spectacular view image"
-					/>
-					<img
-						class="img_opacity hidden laptop"
-						src="pictures/image_29.png"
-						alt="chairs"
 					/>
 				</div>
 				<div class="hide-img-stalee hide">
